# devtools-api

./: .gitignore  devtools-api.cabal  update
src/DevTools/API/: Accessibility.hs  Animation.hs  ApplicationCache.hs  Audits.hs  BackgroundService.hs  Browser.hs  CSS.hs  CacheStorage.hs  Cast.hs  Console.hs  DOM.hs  DOMDebugger.hs  DOMSnapshot.hs  DOMStorage.hs  Database.hs  Debugger.hs  DeviceOrientation.hs  Emulation.hs  Fetch.hs  HeadlessExperimental.hs  HeapProfiler.hs  IO.hs  IndexedDB.hs  Input.hs  Inspector.hs  LayerTree.hs  Log.hs  Media.hs  Memory.hs  Network.hs  Overlay.hs  Page.hs  Performance.hs  Profiler.hs  Runtime.hs  Schema.hs  Security.hs  ServiceWorker.hs  Storage.hs  SystemInfo.hs  (+5 more)
src/DevTools/API/Accessibility/: Types.hs
src/DevTools/API/Animation/: Types.hs
src/DevTools/API/ApplicationCache/: Types.hs
src/DevTools/API/Audits/: Types.hs
src/DevTools/API/BackgroundService/: Types.hs
src/DevTools/API/Browser/: Types.hs
src/DevTools/API/CSS/: Types.hs
src/DevTools/API/CacheStorage/: Types.hs
src/DevTools/API/Cast/: Types.hs
src/DevTools/API/Console/: Types.hs
src/DevTools/API/DOM/: Types.hs
src/DevTools/API/DOMDebugger/: Types.hs
src/DevTools/API/DOMSnapshot/: Types.hs
src/DevTools/API/DOMStorage/: Types.hs
src/DevTools/API/Database/: Types.hs
src/DevTools/API/Debugger/: Types.hs
src/DevTools/API/DeviceOrientation/: Types.hs
src/DevTools/API/Emulation/: Types.hs
src/DevTools/API/Fetch/: Types.hs
src/DevTools/API/HeadlessExperimental/: Types.hs
src/DevTools/API/HeapProfiler/: Types.hs
src/DevTools/API/IO/: Types.hs
src/DevTools/API/IndexedDB/: Types.hs
src/DevTools/API/Input/: Types.hs
src/DevTools/API/Inspector/: Types.hs
src/DevTools/API/LayerTree/: Types.hs
src/DevTools/API/Log/: Types.hs
src/DevTools/API/Media/: Types.hs
src/DevTools/API/Memory/: Types.hs
src/DevTools/API/Network/: Types.hs
src/DevTools/API/Overlay/: Types.hs
src/DevTools/API/Page/: Types.hs
src/DevTools/API/Performance/: Types.hs
src/DevTools/API/Profiler/: Types.hs
src/DevTools/API/Runtime/: Types.hs
src/DevTools/API/Schema/: Types.hs
src/DevTools/API/Security/: Types.hs
src/DevTools/API/ServiceWorker/: Types.hs
src/DevTools/API/Storage/: Types.hs
src/DevTools/API/SystemInfo/: Types.hs
src/DevTools/API/Tethering/: Types.hs
src/DevTools/API/Tracing/: Types.hs
src/DevTools/API/WebAudio/: Types.hs
src/DevTools/API/WebAuthn/: Types.hs
